# mpc-sac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mpc_sac/: __init__.py  run.py  trainer.py
mpc_sac/nn/: bounded_distributions.py  extractor.py  gaussian.py  mlp.py  scale.py
mpc_sac/rl/: __init__.py  buffer.py  crossq.py  crossq_zop.py  mpc_actor.py  sac.py  sac_fop.py  sac_zop.py  utils.py
mpc_sac/utils/: __init__.py  cfg.py  git.py  gym.py  logger.py  rollout.py  seed.py  torch_gym.py
scripts/: compare_sensitivity_timings.py  run_baseline.py  run_controller.py  run_sac.py  run_sac_fop.py  run_sac_zop.py  run_sac_zop_rendering.py  run_smac_tuning.py
scripts/hvac/: run_baseline.py  run_crossq.py  run_crossq_zop.py  run_sac.py
scripts/hvac/plotting/: plot_validation_run.py
tests/mpc_sac/: test_scripts.py  test_trainer.py
tests/mpc_sac/nn/: test_bounded_dist.py  test_mlp.py  test_scale.py
tests/mpc_sac/rl/: test_buffer.py  test_mpcrlactor.py
tests/mpc_sac/utils/: test_gym.py
